# CADExchangeAssignment

./: CMakeLists.txt  README.md  run.sh
include/: figures.h
src/: figures.cpp  main.cpp
